2006-08-08  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/parser.cpp: Fixed a minor bug in get<int>() function
	caused by too early execution of it_assert() check function.

	* itpp/base/mat.cpp, itpp/base/mat.h, itpp/base/vec.cpp: Fixed a
	minor bug in string parsing functions that prevented
	initialisation of a vector/matrix with an empty string "".

2006-08-08  Erik G. Larsson <erik_g_larsson@users.sourceforge.net>
	
	* itpp/comm/rec_syst_conv_code.cpp, itpp/comm/rec_syst_conv_code.h:
	Added floating point range tests when using exponential and
	logarithm functions to avoid numerical errors at high SNR in
	map_decode(), to address bug [1088420]. Updated documentation to
	suggest that the QLLR based decoders are used instead for maximum
	runtime efficiency and numerical stability.

2006-08-08  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/array.h, tests/array_test.cpp, tests/array_test.ref:
	Added new constructors and operator `=' which use string literals
	for Array initialisation. There is no need to use `set_array()'
	function any more. Test program improved as well. Source code of
	"array.h" beautified by the way.

	* tests/vec_test.cpp: Fixed improper file description.

	* tests/parser_test.cpp: Fixed minor compilation problem caused by
	passing C-style string as an argument of init(std::string)
	function.

==============================================================================

2006-08-07  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 3.10.4 released (SVN tag: release-3-10-4)

	* NEWS: Updated to reflect recent changes (merged rev. 579:581
	from itpp-3-10 branch).

	* itpp/base/bessel.cpp, itpp/base/bessel/jv.cpp,
	itpp/base/bessel/struve.cpp, itpp/base/random.h,
	itpp/protocol/tcp.cpp: Removed most of the "#pragma warning"
	statements needed by MSVC++ .NET compiler (merged rev. 577:578
	from itpp-3-10 branch).
	
	* win32/itpp.vcproj: Added _CRT_SECURE_NO_DEPRECATE and